Rename init to bach.jsh and Init.java to Bach.java