@@ -1,16 +1,14 @@
 @ECHO OFF
 
-IF [%1]==[init] GOTO INIT
+IF [%1]==[boot] GOTO BOOT
+GOTO MAIN
 
-java --module-path .bach\cache --module com.github.sormuras.bach %*
-
+:BOOT
+jshell --module-path .bach\cache --add-modules com.github.sormuras.bach .bach\boot.jsh
 GOTO END
 
-:INIT
-del .bach\cache\com.github.sormuras.bach@*.jar >nul 2>&1
-SETLOCAL
-IF [%2]==[] ( SET tag=17-ea ) ELSE ( SET tag=%2 )
-jshell -R-Dreboot -R-Dversion=%tag% https://bit.ly/bach-main-init
-ENDLOCAL
+:MAIN
+java --module-path .bach\cache --module com.github.sormuras.bach %*
+GOTO END
 
 :END
